# rpcdb

./: .gitignore  CMakeLists.txt  README.md  compile.sh  rpcdb.x  run_tests.sh
client/: client.cpp  client.h  main.cpp  rpcdb.h  rpcdb_clnt.c  rpcdb_xdr.c
client/input_controller/: input_controller.cpp  input_controller.h  input_list.h
client/input_controller/file/: file.cpp  file.h
client/input_controller/stdin/: stdin.cpp  stdin.h
client/request/: request.cpp  request.h  request_list.h
client/request/active/: active_list.h  active_req.cpp  active_req.h  active_req_list.h
client/request/load/: load_req.cpp  load_req.h
client/request/login/: login_req.cpp  login_req.h
client/response/: response.cpp  response.h  response_list.h
client/response/active/: active_res.cpp  active_res.h  active_res_list.h
client/response/get_stat/: get_stat_res.cpp  get_stat_res.h
client/response/get_stat_all/: get_stat_all.cpp  get_stat_all.h
client/response/login/: login_res.cpp  login_res.h
client/response/read/: read_res.cpp  read_res.h
client/response/read_all/: read_all_res.cpp  read_all_res.h
client/response/store/: store_res.cpp  store_res.h
client/rpc/: call_rpc.cpp  call_rpc.h  call_rpc_list.h
server/: rpcdb_srv.cpp  rpcdb_svc.c  server.cpp  server.h
server/command/: command.cpp  command.h  command_list.h
server/command/add/: cmd_add.cpp  cmd_add.h
server/command/delete/: cmd_delete.cpp  cmd_delete.h
server/command/get_stat/: cmd_get_stat.cpp  cmd_get_stat.h
server/command/get_stat_all/: cmd_get_stat_all.cpp  cmd_get_stat_all.h
server/command/load/: cmd_load.cpp  cmd_load.h
server/command/login/: cmd_login.cpp  cmd_login.h
server/command/logout/: cmd_logout.cpp  cmd_logout.h
server/random_gen/: random_gen.cpp  random_gen.h
status_codes/: status_codes.cpp  status_codes.h
tests/: test1.txt  test2.txt  test3.txt
(+45 files in other folders)
